# NBTest

./: .gitignore  LICENSE  README.md  config.json  nbtest_gen.py  pyproject.toml
assert_gen/: assertionGenerator.py  functionTransformer.py  notebookRunner.py
example/: heart-failure-classification.ipynb  heart-failure-classification_chebyshev_0.95_10.ipynb  heart-failure-classification_tmp.ipynb  nbtest_plugin_example.ipynb
nbtest_demo/: digits_recognition.ipynb  digits_recognition_nbtest_assertion.ipynb  environment.yml  house-prices-advanced-regression-techniques.ipynb  house-prices.ipynb  kernel-metadata.json  requirements.txt  task1_house-prices-advanced-regression-techniques.ipynb  task2_digits_recognition.ipynb  task2_digits_recognition_nbtest_assertion_hide.ipynb
nbtest_lab_extension/: package.json  pyproject.toml
nbtest_lab_extension/src/: index.ts
nbtest_plugin/: README.md  pyproject.toml
nbtest_plugin/src/nbtest/: conftest.py  kernel.py  nbtest.py
properties/: functionTransformer.py  propertyFinder.py
utils/: pytest_run.py  utils.py
